tests/baselines/reference/better_subType_assignable_to_superType_error_messsage.errors.txt
better_subType_assignable_to_superType_error_messsage.ts(13,3): error TS2322: Type 'SuperType' is not assignable to type 'SubType2'.
  'SubType2' is constrained to be a subtype of 'SuperType'.


==== better_subType_assignable_to_superType_error_messsage.ts (1 errors) ====
    function parameterExtendsOtherParameter<SuperType, SubType extends SuperType, SubType2 extends SubType>(superType: SuperType, subType2: SubType2) {
      // TS 3.3: Type 'SuperType' is not assignable to type 'SubType'.
      //
      // TS 3.5: Type 'SuperType' is not assignable to type 'SubType'. 
      //         'SuperType' is assignable to the constraint of type 'SubType', but 'SubType' could be instantiated with a different subtype of constraint '{}'.
      //
      // TS 3.9: Type 'SuperType' is not assignable to type 'SubType'.
      //         'SubType' could be instantiated with an arbitrary type which could be unrelated to 'SuperType'.
      //
      // TS 4.8: Type 'SuperType' is not assignable to type 'SubType'.
      //         'SubType' could be instantiated with an arbitrary type which could be unrelated to 'SuperType'.
      //         input.tsx(1, 41): This type parameter might need an `extends V` constraint.
      subType2 = superType;
      ~~~~~~~~
!!! error TS2322: Type 'SuperType' is not assignable to type 'SubType2'.
!!! error TS2322:   'SubType2' is constrained to be a subtype of 'SuperType'.
!!! related TS2208 better_subType_assignable_to_superType_error_messsage.ts:1:41: This type parameter might need an `extends SubType2` constraint.
    }
    